# lxy

./: .gitignore  README.md  requirements.txt
bundled-tools/: README.md
resources/: build-info.json
scripts/: prepare-linux-toolchain.sh  prepare-windows-toolkit.ps1  verify-linux-toolchain.sh  verify-windows-toolkit.ps1
src/: activity-drawer.css  backend-client.js  card-aspect-ratio.css  card-aspect-ratio.js  controller-overlay.css  controller-overlay.js  controls-button-positions.json  controls-keyboard-preset.js  controls-rows.js  controls-screen.css  controls-screen.js  dev-settings.css  dev-settings.js  environment-actions.js  environment-screen.js  features-picker.js  features-screen.css  features-screen.js  features-sprite-preview.js  index.html  key-capture.js  launcher-update-checker.js  link-sprite-animations.js  link-sprite-editor.css  link-sprite-editor.js  link-sprite-preview.js  main.js  manual-guides.css  manual-guides.js  manual-install-guides.json  (+12 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/bundled-tools/: README.md
src-tauri/patches/snesrev-zelda3/: Makefile
src-tauri/src/: actions.rs  asset_builds.rs  bundled_tools.rs  command_env.rs  discovery.rs  env_checks.rs  external_links.rs  feature_asset_catalog.rs  feature_asset_paths.rs  feature_asset_store.rs  feature_assets.rs  file_dialogs.rs  ini_config.rs  launcher_update_downloads.rs  launcher_update_installers.rs  launcher_updates.rs  lib.rs  main.rs  makefile_patches.rs  models.rs  paths.rs  randomizer.rs  repo_updates.rs  rom_storage.rs  runtime_info.rs
(+20 files in other folders)
