[package]
name = "z3r-launcher"
version = "0.1.0"
description = "Cross-platform launcher for Xander's Z3R fork"
authors = ["Xander"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "z3r_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.1", features = [] }
tauri-plugin-dialog = "2.7.1"
